# pm64openworldrandomizer_website

./: .gitignore  Pipfile  README.md  app.py  app.yaml  cloudbuild-dev.yaml  cloudbuild-prod.yaml  db.sqlite  main.py  manage.py  noxfile_config.py  presets.json  prod.yaml  pyproject.toml  requirements.txt  uat.yaml
models/database/: cosmetic_settings.py  seed.py
models/request/: cosmetics_schema.py  seed_schema.py
pm64openworldrandomizer_website/: README.md  asgi.py  settings.py  urls.py  wsgi.py
randomizer/: models.py  serializers.py  urls.py  views.py
randomizer/migrations/: 0002_rename_blue_house_open_setting_allowphysicsglitches_and_more.py  0003_setting_isdefault.py  0004_setting_includedojo.py  0005_alter_setting_initialcoins.py  0006_remove_setting_blocksmatchcontent.py  0007_setting_progressivescaling.py  0008_setting_quizmoalwaysappears_setting_romannumerals.py
randomizer_server/: apps.py  models.py  serializers.py  urls.py  views.py
randomizer_server/migrations/: 0001_initial.py  0002_rename_blue_house_open_setting_allowphysicsglitches_and_more.py  0003_setting_isdefault.py  0004_setting_includedojo.py  0005_alter_setting_initialcoins.py  0006_remove_setting_blocksmatchcontent.py  0007_setting_progressivescaling.py  0008_setting_quizmoalwaysappears_setting_romannumerals.py  0009_remove_setting_id_setting_seedid_and_more.py  0010_setting_creationdate.py  0011_setting_starrodmodversion.py
services/: cloud_storage_service.py  database_service.py  local_storage.py  seed_hash_service.py  seed_util.py
tools/: query_setting.py  update_missing_offsets.py
(+16 files in other folders)
