[tool.poetry]
name = "pm64openworldrandomizer_website"
version = "0.1.0"
description = ""
authors = ["Josh <54910913+JoshW-7@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.10.0"
django-environ = "==0.8.1"
google-cloud-secret-manager = "==2.8.0"
google-cloud-storage  = "==2.1.0"
psycopg2-binary = "==2.9.3"

#randomizer modules
pyyaml = "==6.0" 
pyqt5 = "==5.15.6" #This version differs from the randomizer packages because 5.15.4 doesnt work with python 3.10
peewee = "==3.14.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
