[tool.poetry]
name = "pm64openworldrandomizer_website"
version = "0.1.0"
description = ""
authors = ["Josh <54910913+JoshW-7@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-secret-manager = "==2.8.0"
google-cloud-storage  = "==2.1.0"
psycopg2-binary = "==2.9.3"
flask = "^2.0.2"
firebase-admin = "==5.2.0"
Flask-Cors = "==3.0.10"
marshmallow = "==3.14.1"
dill = "==0.3.4"


#randomizer modules
pyyaml = "==6.0" 
pyqt5 = "==5.15.6" #This version differs from the randomizer packages because 5.15.4 doesnt work with python 3.10
peewee = "==3.15.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
